--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Microverse Project - Survey Form</title>
+    <meta name="description">Building a survey form for Microverse Trial</meta>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <h1 id="title">Microverse Trial Survey</h1>
+    <p id="description">This is a survey for the Microverse Trial. This short description is to help the user see that this is developed for that purpose. Feel free to fill out the survey below.</p>
 
-    <!--
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <script  src="js/index.js"></script>
+
   </body>
 </html>
