--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   </head>
 
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1 id="title">Microverse Trial Survey</h1>
     <p id="description">This is a survey for the Microverse Trial. This short description is to help the user see that this is developed for that purpose. Feel free to fill out the survey below.</p>
+    <section id="container">
+    <form id="survery-form">
+    <label>First Name</label>
+    <input  id="name" type="text"></input>
+    <label>Email</label>
+    <input  id="email" type="email"></input>
+    
 
-
+    </form>
+    </section>
+    
     <script  src="js/index.js"></script>
-
   </body>
 </html>
